mejoramos el entorno de about_me

--- a/index.html
+++ b/index.html
@@ -37,16 +37,26 @@
              Soy una persona dedicado a sus objetivos, capaz de integrarse en proyectos grupales.
              <br>Intereses especiales en las nuevas tecnologías de información.
             </p>
-            <div>
-              <i class="far fa-envelope"></i>
-              <p>jair_55_88@hotmail.com</p>
-            </div>
-            <div>
-              <i class="fab fa-github"></i>
-              <p>
+            
+            <div class="home__about_me_contact">
+              <div>
+                <i class="far fa-envelope"></i>
+                jair_55_88@hotmail.com
+              </div>
+              <div>
+                <i class="fab fa-github"></i>
                 <a href="https://github.com/22jair" target="__blank">22jair</a>
-              </p>
+              </div>
+              <div>
+                <i class="fas fa-globe"></i>
+                <a href="https://22jair.github.io/" target="__blank">Página Web</a>
+              </div>
+              <div>
+                <i class="fas fa-tasks"></i>
+                <a href="https://22jair.github.io/proyects" target="__blank">Proyectos</a>
+              </div>
             </div>
+
           </div>
         </div>
         <div class="col-5 home__content">
