--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <body>
     <section class="container home__">
       <div class="row no-gutter">
-        <div class="col-2"></div>        
-        <div class="col-3 home__about_me sticky-top">          
+        <div class="d-sm-none d-lg-block col-lg-1"></div>        
+        <div class="col-12 col-sm-12 col-md-5 col-lg-4 home__about_me">          
           <figure class="w-100 home__about_me_photo">
             <img class="w-100 h-100" src="img/photo.jpg" alt="myPhoto" />
           </figure>
@@ -59,7 +59,7 @@
 
           </div>
         </div>
-        <div class="col-5 home__content">
+        <div class="col-12 col-sm-12 col-md-7 col-lg-6 home__content">
           <!-- Education -->
           <div class="home__education">
             <div class="separator row">
@@ -196,11 +196,9 @@
             
           </div>
         </div>
-        <div class="col-2"></div>
+        <div class="d-sm-none d-lg-block col-lg-1"></div> 
       </div>
     </section>
-
- 
 
     <!-- bootstrap -->
     <script
